fixed color contrast issue

--- a/tasteedish/styles/siteplan.css
+++ b/tasteedish/styles/siteplan.css
@@ -50,7 +50,7 @@ main {
 }
 
 main section h2 {
-  color: var(--earth-yellow);
+  color: var(--black-bean);
 }
 
 main section p,
